--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.7.0",
+    "firebase": "^9.8.3",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.32.2",
+    "react-hot-toast": "^2.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
